--- a/src/views/404.pug
+++ b/src/views/404.pug
@@ -4,4 +4,4 @@ block variables
   - var htmlTitle = "404";
 
 block content
-  p Sorry that content cant be found.
+  p Sorry that content cant be found!
