--- a/src/views/layouts/_jakeoid.pug
+++ b/src/views/layouts/_jakeoid.pug
@@ -13,7 +13,7 @@ html
     meta(name='author', content='Jakeoid')
 
     meta(name='og:type', content='website')
-    meta(name='og:title', content='Jakeoid - #{htmlTitle}')
+    meta(name='og:title', content='Jakeoid')
     meta(name='og:description', content='Hi, im Jakeoid. I develop and design things in Australia.')
     meta(name='og:image', content='https://jakeoid.com/img/meta-icon.png')
 
