--- a/src/views/projects/index.pug
+++ b/src/views/projects/index.pug
@@ -17,7 +17,7 @@ block content
           Convert between the Nato phonetic alphabet (i.e Alpha Beta Crimson) from English and back again using this quick and easy resource.
         div.btn Goto &rarr;
       div
-        h2 /r/naut Theme Generator
+        h2 /r/Naut Theme Generator
         p.
           Generate a color scheme (and change some basic assets) of the /r/naut theme and adapt your subreddit into something more custom!
         div.btn Goto &rarr;
