Moving SEO to https.

--- a/src/views/layouts/_jakeoid.pug
+++ b/src/views/layouts/_jakeoid.pug
@@ -31,8 +31,8 @@ html
         "@context": "http://schema.org",
         "@type": "Organization",
         "name": "Jakeoid",
-        "url": "http://www.jakeoid.com",
-        "logo": "http://www.jakeoid.com/img/meta-icon.png",
+        "url": "https://www.jakeoid.com",
+        "logo": "https://jakeoid.com/img/meta-icon.png",
         "description": "I develop and design things in Australia.",
         "email": "mailto:jake@jakeoid.com",
         "sameAs" : [ "https://twitter.com/jakeoid_",
